# image-setakgi-app

./: .gitignore  AGENT.md  README.md  WINDOWS_BUILD.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/image_ops/: mod.rs
src-tauri/src/output/: mod.rs
src-tauri/src/preview/: mod.rs
src/app/provider/: query-client.tsx
src/app/styles/: global.css  tailwind.css
src/entities/: options.ts
src/features/options/hooks/: useOptions.ts
src/features/options/state/: options.atom.ts
src/features/uploader/hooks/: useUploadList.ts
src/features/uploader/ui/: DropZone.tsx
src/pages/home/: HomePage.tsx
src/shared/api/: tauri.ts
src/shared/ui/button/: Button.tsx
