[package]
name = "image-setakgi-app"
version = "0.1.0"
description = "Local-only image batch transformer built with Rust + Tauri"
authors = ["image-setakgi"]
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
dirs-next = "2.0"
image = { version = "0.24", features = ["png", "jpeg", "webp", "gif", "ico", "tiff"] }
imageproc = "0.23"
kamadak-exif = "0.5"
rand = "0.8"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = ["dialog-open", "fs-all", "path-all"] }
thiserror = "1.0"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
